Feat: List user favorite posts
